--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
 .grid {
-    border: 2px red solid;
+    border: 1px red solid;
     display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
+    margin: 0px auto;
+    width: 480px;
+    /* flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 256px;
+    height: 256px; */
+}
+
+.box {
+    height: 30px;
+    background-color: lightgray;
+}
+
+button {
+    display: flex;
+    margin: 8px auto;
 }
