--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     padding: 5px;
     margin: 0px auto;
     width: 480px;
+    height: 480px;
     /* flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -20,4 +21,9 @@
 button {
     display: flex;
     margin: 8px auto;
+    padding: 4px 8px;
+    border-radius: 4px;
+    border-color: black;
+    background-color: black;
+    color: white;
 }
